syntax="proto3";

package map;

service MapService {
  rpc GetGeocode (GetGeocodeRequest) returns (Geocode);
}

message GetGeocodeRequest {
  double latitude  = 1;
  double longitude = 2;
}

message Geocode {
  string name    = 1;
  string address = 2;
}